@@ -6,6 +6,11 @@
 	* c_src/stringprep_drv.c: Internal name of the driver changed to
 	`exmpp_stringprep_erl'.
 
+	* c_src/exmpp_stringprep_drv.c, c_src/exmpp_stringprep_drv.c,
+	c_src/Makefile.am, src/stringprep.erl: Prefixed `stringprep_drv' with
+	`exmpp_' to avoid conflicts with ejabberd's own stringprep_drv. This
+	permits exmpp to coexist with ejabberd.
+
 2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* configure.ac: Next branch will be 0.7.
